--- a/tootoo12/theo-armour/the-armour.html
+++ b/tootoo12/theo-armour/the-armour.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This script allows you to list, open view all the files in all the Spider folders" >
+<meta name = "description" content = "This script allows you to list, open view all the files in all the Theo Armour folders" >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-02-01" >
-<title>Spider</title>
+<meta name = "date" content = "2018-02-11" >
+<title>Theo Armour</title>
 
 <style>
-/* Copyright 2018 Ladybug Tools authors. MIT License */
+/* Copyright 2018 Theo Armour authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -49,13 +49,13 @@
 
 	<div id = "divMenu" >
 
+		<!--
 		<p>
 			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo;
-<!--
 			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
--->
 		</p>
+		-->
 
 		<h2>
 			<a id="urlInfo" target="_top" >info</a>
@@ -105,8 +105,8 @@
 
 <script>
 
-	const user = 'ladybug-tools';
-	const repo = '/spider';
+	const user = 'theo-armour';
+	const repo = '/theo-armour.github.io';
 	const pathRepo = '';
 	const branch = '/master/'
 
@@ -127,7 +127,7 @@
 	function init() {
 
 		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
+		//console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 		urlInfo.innerHTML = iconInfo;
@@ -143,7 +143,7 @@
 	function onHashChange() {
 
 		let url, ulc, pathCurrent;
-
+		/*
 		if ( !location.hash ) {
 
 			url = urlGitHubPage + uriDefaultFile;
@@ -151,19 +151,18 @@
 			pathCurrent = '';
 
 		} else {
+		*/
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
-//console.log( 'url', url );
+			//console.log( 'url', url );
 
 			const crumbs = url.slice( urlGitHubPage.length );
 			pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
 //console.log( 'pathCurrent',  pathCurrent );
 
-		}
-
-
+//		}
 
 		getFolderContents( pathCurrent );
 
@@ -242,7 +241,7 @@
 
 		if ( items.message ) { alert( items.message ); return; }
 
-		const ignoreFolders = [ 'archive', 'data', 'pages', 'plugins', 'read-gbxml' ]; //, 'plugins'
+		const ignoreFolders = [ 'aceit', 'db-boilerplate','data', 'js', 'menu' ]; //, 'plugins'
 
 		for ( let item of items ) {
 
@@ -262,7 +261,7 @@
 
 		}
 
-		const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html', 'ladybug-tools-spider.html' ];
+		const ignoreFiles = [ '.gitattributes', '.gitignore', '.nojekyll',  ];
 
 		for ( let item of items ) {
 
@@ -287,7 +286,8 @@
 					'</tr></table>';
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-					&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
+//					&& item.path !== 'README.md'
+					&& item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
 
