--- a/tootoo12/jaanga/jaanga.html
+++ b/tootoo12/jaanga/jaanga.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This script allows you to list, open view all the files in all the Theo Armour folders" >
+<meta name = "description" content = "This script allows you to list, open view all the files in all the jaanga folders" >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-02-11" >
-<title>Theo Armour pushme-pullyou</title>
+<meta name = "date" content = "2018-02-12" >
+<title>Jaanga</title>
 
 <style>
-/* Copyright 2018 Ladybug Tools authors. MIT License */
+/* Copyright 2018 Jaanga authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
-	html { --mnu-color: MediumSlateBlue; --mnu-back-color: ivory; --mnu-width:300px; height: 100%; }
+	html { --mnu-color: crimson; --mnu-back-color: LemonChiffon ; --mnu-width:300px; height: 100%; }
 
 	body, html { font: 12pt monospace; height: 100%; margin: 0; }
 
@@ -105,12 +105,12 @@
 
 <script>
 
-	const user = 'theo-armour';
-	const repo = '/theo-armour.github.io';
+	const user = 'jaanga';
+	const repo = '/jaanga.github.io';
 	const pathRepo = '';
 	const branch = '/master/'
 
-	const uriDefaultFile = 'README.md';
+	const uriDefaultFile = 'readme.md';
 //	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
@@ -127,7 +127,7 @@
 	function init() {
 
 		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
+		//console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 		urlInfo.innerHTML = iconInfo;
@@ -143,7 +143,7 @@
 	function onHashChange() {
 
 		let url, ulc, pathCurrent;
-
+/*
 		if ( !location.hash ) {
 
 			url = urlGitHubPage + uriDefaultFile;
@@ -151,19 +151,18 @@
 			pathCurrent = '';
 
 		} else {
+*/
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
-//console.log( 'url', url );
+			//console.log( 'url', url );
 
 			const crumbs = url.slice( urlGitHubPage.length );
 			pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-//console.log( 'pathCurrent',  pathCurrent );
+//			console.log( 'pathCurrent',  pathCurrent );
 
-		}
-
-
+//		}
 
 		getFolderContents( pathCurrent );
 
@@ -236,6 +235,7 @@
 
 		const response = xhr.target.response;
 		const items = JSON.parse( response );
+		console.log( 'items', items );
 		const len = pathRepo.length;
 
 		let txt = '';
@@ -262,7 +262,7 @@
 
 		}
 
-		const ignoreFiles = [ '.gitattributes', '.gitignore', '404', 'ladybug-tools-spider.html' ];
+		const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html', 'ladybug-tools-spider.html' ];
 
 		for ( let item of items ) {
 
@@ -286,8 +286,10 @@
 
 					'</tr></table>';
 
+// simplify
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-					&& item.path !== 'README.md' && item.name.toLowerCase() === 'readme.md' ) {
+					//&& item.path !== 'README.md'
+					&& item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
 
@@ -351,11 +353,13 @@
 
 			divMenu.style.left = 'calc( -1 * var( --mnu-width ) - 20px )';
 			hamburger.style.left = '-100px';
+			divContainer.style.marginLeft = '0';
 
-			} else {
+		} else {
 
-				divMenu.style.left = 0;
-				hamburger.style.left = left;
+			divMenu.style.left = 0;
+			hamburger.style.left = left;
+			divContainer.style.marginLeft = 'var( --mnu-width )';
 
 		}
 
