--- a/tootoo-templates/threejs-in-hamburger-iframe-basic/threejs-in-hamburger-iframe-basic-r1.html
+++ b/tootoo-templates/threejs-in-hamburger-iframe-basic/threejs-in-hamburger-iframe-basic-r1.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "List and view all the files in all the folders" >
+<meta name = "description" content = "Three.js with slider menu" >
 <meta name = "keywords" content = "gbXML,JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-11-11" >
+<meta name = "date" content = "2018-02-14" >
 <title>Index Table of Contents</title>
 
 <style>
@@ -40,7 +40,7 @@
 </style>
 </head>
 <body>
-<script src = "https://cdn.rawgit.com/showdownjs/showdown/1.8.5/dist/showdown.min.js" ></script>
+<script src = "https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js" ></script>
 
 
 	<div id = "divMenu" >
