--- a/tootoo-templates/threejs-basic-hamburger-new.html
+++ b/tootoo-templates/threejs-basic-hamburger-new.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
-<meta name=description content="Real-time 3D in your browser with menu sliding" >
+<meta name=description content="Real-time 3D in your browser using the Three.js JavaScript library with menu sliding" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-01-18" >
+<meta name = "date" content = "2018-03-08" >
 <title></title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -45,8 +45,8 @@
 </style>
 </head>
 <body>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/r89/build/three.min.js" ></script>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/r89/examples/js/controls/OrbitControls.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r90/build/three.min.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r90/examples/js/controls/OrbitControls.js" ></script>
 
 	<div id = "divMenu" >
 
