--- a/tootoo12/theo-armour/file-catalog.html
+++ b/tootoo12/theo-armour/file-catalog.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This script allows you to list, open view all the files in all the Theo Armour folders" >
+<meta name = "description" content = "This menu script allows you to list, open and view all the files in all the Theo Armour folders" >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-02-11" >
 <title>Theo Armour</title>
@@ -81,6 +81,7 @@
 		<div id= "divFooter" >
 
 			<div title='many thanks!' ><a href=#pages/credits.md >Credits</a></div>
+			<div title='' ><a href=#pages/about-this-cms.md >About this CMS</a></div>
 			<div><a href=#pages/code-of-conduct.md >Code of Conduct</a></div>
 			<div><a href=#pages/contributing.md >Contributing</a></div>
 			<div><a href=#pages/license.md >License</a></div>
@@ -111,7 +112,7 @@
 	const branch = '/master/'
 
 	const uriDefaultFile = 'README.md';
-//	const uriDefaultFile = '../../plugins/view-github-issues.html'
+	//const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
@@ -143,15 +144,16 @@
 	function onHashChange() {
 
 		let url, ulc, pathCurrent;
-		/*
-		if ( !location.hash ) {
 
-			url = urlGitHubPage + uriDefaultFile;
-			ulc = url.toLowerCase();
-			pathCurrent = '';
+			/*
+			if ( !location.hash ) {
 
-		} else {
-		*/
+				url = urlGitHubPage + uriDefaultFile;
+				ulc = url.toLowerCase();
+				pathCurrent = '';
+
+			} else {
+			*/
 
 			url = location.hash.slice( 1 );
 			ulc = url.toLowerCase();
@@ -160,7 +162,7 @@
 			const crumbs = url.slice( urlGitHubPage.length );
 			pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
 
-//console.log( 'pathCurrent',  pathCurrent );
+			//console.log( 'pathCurrent',  pathCurrent );
 
 //		}
 
@@ -285,8 +287,23 @@
 
 					'</tr></table>';
 
+				/*
+				txt +=
+				`<div>
+					<div style=display:inline-block;vertical-align:text-top; >
+						<a href="` + urlGitHubSource + `/blob` + branch + itemPath + `" target=_top >` + iconInfo + `</a>
+					</div>
+					<div style=display:inline-block;vertical-align:text-top; >
+					<a href=#` + urlGitHubPage + pathRepo + itemPath +
+							` title="` + item.size.toLocaleString() + ` bytes" > ` + item.name + `</a> ` +
+							( item.path.endsWith( 'html' ) ?
+							`<a href=` + urlGitHubPage + pathRepo + itemPath + ` >&#x2750;</a>` : `` ) +
+
+					`</div>
+				</div>`;
+				*/
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-//					&& item.path !== 'README.md'
+					//&& item.path !== 'README.md'
 					&& item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
