--- a/tootoo12/theo-armour/theo-armour-menu-custom.html
+++ b/tootoo12/theo-armour/theo-armour-menu-custom.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset = "utf-8" >
 <meta name = "viewport" content= "width=device-width, initial-scale=1">
-<meta name = "description" content = "This menu script allows you to list, open and view the files in selected Spider folders" >
+<meta name = "description" content = "This menu script allows you to list, open and view all the files in all the Theo Armour folders" >
 <meta name = "keywords" content = "JavaScript,Markdown,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-02-14" >
-<title>Spider</title>
+<meta name = "date" content = "2018-02-11" >
+<title>Theo Armour</title>
 
 <style>
-/* Copyright 2018 Ladybug Tools authors. MIT License */
+/* Copyright 2018 Theo Armour authors. MIT License */
 
 /* https://www.w3schools.com/colors/colors_names.asp // use colors and borders to help identify the scope of particular elements */
 
@@ -49,13 +49,13 @@
 
 	<div id = "divMenu" >
 
+		<!--
 		<p>
 			<a href="http://www.ladybug.tools/" target="_top" >Ladybug Tools</a> &raquo;
-<!--
 			<a href="http://www.ladybug.tools/spider/" target="_top" >&#x1f578;</a> &raquo;
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
--->
 		</p>
+		-->
 
 		<h2>
 			<a id="urlInfo" target="_top" >info</a>
@@ -64,9 +64,23 @@
 
 		<p><script> document.write(document.head.querySelector( '[name=description]' ).content ); </script></p>
 
+
 		<div id = "divBreadcrumbs"></div>
 
-		<div id = "divMenuItems" ></div>
+		<div id = "divMenuItems" >
+
+			<p><a href="#page/about.md" >About Theo</a></p>
+
+			<p><a href="#page/contact.md" >Contact Theo</a></p>
+
+			<p><a href="file-catalog.html" >Catalog of all files here</a></p>
+
+			<p><a href="https://theo-armour.github.io/file-catalog.html#alt-stoic/README.md" >alt-stoic</a></p>
+
+			<p><a href="ta2.html" target="_blank">ta2</a></p>
+		</div>
+		<div id = "divMenuAPI" ></div>
+
 
 		<hr>
 
@@ -106,13 +120,13 @@
 
 <script>
 
-	const user = 'ladybug-tools';
-	const repo = '/spider';
+	const user = 'theo-armour';
+	const repo = '/theo-armour.github.io';
 	const pathRepo = '';
 	const branch = '/master/'
 
 	const uriDefaultFile = 'README.md';
-//	const uriDefaultFile = '../../plugins/view-github-issues.html'
+	//const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
@@ -127,8 +141,8 @@
 
 	function init() {
 
-		urlGitHubPage = location.href.includes( 'www.ladybug.tools' ) || location.href.includes( '/ladybug-tools.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-		//console.log( 'urlGitHubPage', urlGitHubPage );
+		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+		console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 		urlInfo.innerHTML = iconInfo;
@@ -144,17 +158,17 @@
 	function onHashChange() {
 
 		let url, ulc, pathCurrent;
-		/*
-		if ( !location.hash ) {
 
-			url = urlGitHubPage + uriDefaultFile;
-			ulc = url.toLowerCase();
-			pathCurrent = '';
+			if ( !location.hash ) {
 
-		} else {
-		*/
+				url = urlGitHubPage + uriDefaultFile;
+				ulc = url.toLowerCase();
+				pathCurrent = '';
 
-			url = location.hash.slice( 1 );
+			} else {
+
+
+			url = urlGitHubPage + location.hash.slice( 1 );
 			ulc = url.toLowerCase();
 			//console.log( 'url', url );
 
@@ -163,9 +177,9 @@
 
 			//console.log( 'pathCurrent',  pathCurrent );
 
-//		}
+		}
 
-		getFolderContents( pathCurrent );
+		//getFolderContents( pathCurrent );
 
 		if ( ulc.endsWith( '.md' ) ) {
 
@@ -242,7 +256,7 @@
 
 		if ( items.message ) { alert( items.message ); return; }
 
-		const ignoreFolders = [ 'archive', 'data', 'pages', 'plugins', 'read-gbxml' ]; //, 'plugins'
+		const ignoreFolders = [ 'aceit', 'db-boilerplate','data', 'js', 'menu' ]; //, 'plugins'
 
 		for ( let item of items ) {
 
@@ -262,7 +276,7 @@
 
 		}
 
-		const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html', 'ladybug-tools-spider.html' ];
+		const ignoreFiles = [ '.gitattributes', '.gitignore', '.nojekyll',  ];
 
 		for ( let item of items ) {
 
@@ -287,7 +301,7 @@
 					'</tr></table>';
 
 				if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-//					&& item.path !== 'README.md'
+					//&& item.path !== 'README.md'
 					&& item.name.toLowerCase() === 'readme.md' ) {
 
 					location.hash = urlGitHubPage + pathRepo + itemPath;
@@ -298,7 +312,7 @@
 
 		}
 
-		divMenuItems.innerHTML = txt;
+		divMenuAPI.innerHTML = txt;
 
 	}
 
@@ -336,7 +350,7 @@
 		xhr.crossOrigin = 'anonymous';
 		xhr.open( 'GET', url, true );
 		xhr.onerror = function( xhr ) { console.log( 'error:', xhr  ); };
-//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
+		//xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
 		xhr.onload = callback;
 		xhr.send( null );
 
