--- a/tootoo-templates/threejs-basic-hamburger-new-2018-05-18.html
+++ b/tootoo-templates/threejs-basic-hamburger-new-2018-05-18.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="Real-time 3D in your browser using the Three.js JavaScript library with menu sliding" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-03-08" >
+<meta name = "date" content = "2018-05-18" >
 <title></title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -48,7 +48,6 @@
 		display: none;
 		}
 	}
-
 </style>
 </head>
 <body>
@@ -63,7 +62,13 @@
 			<a href="../index.html" target="_"top style=font-size:24px; >&#x2302;</a> &raquo;
 		</div>
 
-		<div id=divTitle ></div>
+		<h1>
+			<a href="https://github.com/ladybug-tools/spider/tree/master/cookbook" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href="" ><script>
+			document.write( location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' ) );
+			//document.write( document.title );
+			</script></a>
+		</h1>
 
 		<div id = "divContents" >
 			<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
@@ -83,12 +88,7 @@
 
 	function init() {
 
-		const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
-		//const title = document.title;
 
-		divTitle.innerHTML =
-			`<h2><a href = "" >${title}</a></h2>
-			<p>${document.head.querySelector( '[name=description]' ).content }</p>`;
 
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
 		renderer.setSize( window.innerWidth, window.innerHeight );
@@ -147,7 +147,7 @@
 
 		renderer.setSize( window.innerWidth, window.innerHeight );
 
-		//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
+//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
 
 	}
 
