--- a/tootoo12/rad-browser/index.html
+++ b/tootoo12/rad-browser/index.html
@@ -6,7 +6,8 @@
 <body>
 <script>
 
-	window.location.href = '../index.html#tootoo12/README.md'
+	window.location.href = '../../index.html#tootoo12/rndmstff-rad-models/README.md';
+
 </script>
 </body>
 </html>
