--- a/tootoo-templates/index.html
+++ b/tootoo-templates/index.html
@@ -30,7 +30,7 @@
 	} else if ( protocol.includes( 'http' ) ) {
 
 		//str = 'https://pushme-pullyou.github.io/tootoo-templates/index.html'
-		pathname = location.pathname;
+		//pathname = location.pathname;
 		len = location.origin.length + 1;
 		path = str.slice(len, pathname.lastIndexOf( '/' ) );
 		path2 = path.replace( /-/g, '' ).replace( /\w+/g, '..' );
