--- a/tootoo-templates/index.html
+++ b/tootoo-templates/index.html
@@ -10,7 +10,7 @@
 	const protocol = location.protocol;
 	console.log( 'protocol', protocol );
 
-	const pathname = location.pathname;
+	pathname = location.pathname;
 	console.log( 'pathname', pathname);
 
 	let path, path2, pathFull;
