--- a/tootoo-templates/index.html
+++ b/tootoo-templates/index.html
@@ -29,20 +29,12 @@
 
 	} else if ( protocol.includes( 'http' ) ) {
 
-		//str = 'https://pushme-pullyou.github.io/tootoo-templates/index.html'
-		//pathname = location.pathname;
+		pathname = location.pathname;
 		len = location.origin.length + 1;
-		path = pathname.slice(len, pathname.lastIndexOf( '/' ) );
+		path = pathname.slice(1, pathname.lastIndexOf( '/' ) );
 		path2 = path.replace( /-/g, '' ).replace( /\w+/g, '..' );
 
 		pathFull = path2 + '/index.html#' + path + '/README.md';
-		
-		//path = pathname.slice( 20, pathname.lastIndexOf( '/' )  ).replace( /-/g, '' ).replace( /\w+/g, '..' )
-		//console.log( 'path', path );
-		
-		//path2 = pathname.slice( 4, pathname.lastIndexOf( '/' )  );
-		//console.log( 'path2', path2 );
-		//pathFull = path + '/index.html#' + path2 + '/README.md';
 
 	}
 
