--- a/index.html
+++ b/index.html
@@ -126,8 +126,18 @@
 
 	function init() {
 
-		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
+		//urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+		//console.log( 'urlGitHubPage', urlGitHubPage );
+		
+		if ( protocol === 'file:' ) {
+
+			urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+
+		} else {
+
+			urlGitHubPage = '';
+
+		}
 
 		urlInfo.href = urlGitHubSource;
 		urlInfo.innerHTML = iconInfo;
