--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		//urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
 		//console.log( 'urlGitHubPage', urlGitHubPage );
 		
-		if ( protocol === 'file:' ) {
+		if ( location.protocol === 'file:' ) {
 
 			urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
 
