--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	const branch = '/master/'
 
 	const uriDefaultFile = 'README.md';
-//	const uriDefaultFile = '../../plugins/view-github-issues.html'
+	//	const uriDefaultFile = '../../plugins/view-github-issues.html'
 
 	const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
 
@@ -126,8 +126,16 @@
 
 	function init() {
 
-		urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
+		if ( protocol === 'file:' ) {
+
+			urlGitHubPage = location.pathname.includes( user + '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+
+		} else {
+
+			urlGitHubPage = '';
+
+		}
+		//console.log( 'urlGitHubPage', urlGitHubPage );
 
 		urlInfo.href = urlGitHubSource;
 		urlInfo.innerHTML = iconInfo;
