--- a/tootoo-templates/threejs-basic-hamburger-new.html
+++ b/tootoo-templates/threejs-basic-hamburger-new.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="Real-time 3D in your browser using the Three.js JavaScript library with menu sliding" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-03-08" >
+<meta name = "date" content = "2018-05-19" >
 <title></title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -30,7 +30,6 @@
 	input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
 /*
-	td { vertical-align: top; }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
@@ -83,12 +82,18 @@
 
 	function init() {
 
+		const source = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/blob/master/tootoo-templates/threejs-basic-hamburger-new.html";
 		const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
 		//const title = document.title;
 
 		divTitle.innerHTML =
-			`<h2><a href = "" >${title}</a></h2>
-			<p>${document.head.querySelector( '[name=description]' ).content }</p>`;
+			`<h2>
+				<a href="${source}" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+				<a href = "" >${title}</a>
+			</h2>
+			<p>
+				${document.head.querySelector( '[name=description]' ).content }
+			</p>`;
 
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
 		renderer.setSize( window.innerWidth, window.innerHeight );
