--- a/tootoo-templates/threejs-basic.html
+++ b/tootoo-templates/threejs-basic.html
@@ -28,13 +28,11 @@
 
 		<div id = "divTitle" ></div>
 
-		<div id = "divContents" >
+		<p>
+			<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
+		</p>
 
-			<p>
-				<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
-			</p>
-
-		</div>
+		<div id = "divContents" ></div>
 
 	</div>
 
