--- a/tootoo-templates/index-2018-05-31.html
+++ b/tootoo-templates/index-2018-05-31.html
@@ -5,17 +5,16 @@
 </head>
 <body>
 <script>
-	// 2018-05-31. Copyright 2018 PushMe-PullYou authors. MIT License.
-	// goal: drop this anywhere in any folder it will call the top level index.html and add the local read me file path as location hash
-	// works locally and in GitHub Pages
+	// 2018-05-18
+	// goal: drop this anywhere in any folder it will call the top level index.html and add the local read e path as location hash
 
 	const protocol = location.protocol;
 	console.log( 'protocol', protocol );
 
-	const pathname = location.pathname;
+	pathname = location.pathname;
 	console.log( 'pathname', pathname);
 
-	let path, pathFull;
+	let path, path2, pathFull;
 
 	const repo = 'pushme-pullyou.github.io'; // rename to repo name
 
@@ -39,11 +38,21 @@
 
 	}
 
+
 	console.log( 'pathFull', pathFull );
 
 	window.location.href = pathFull;
 	// comment above line to see how it works
 
+/*
+
+const pathname = location.pathname;
+path = pathname.slice( 1, pathname.lastIndexOf( '/' )  );
+console.log( 'path', path );
+pathFull = path.replace( /-/g, '' ).replace( /\w+/g, '..' ) + '/index.html#' + path + '/README.md';
+console.log( 'pathFull', pathFull);
+
+*/
 
 </script>
 </body>
