--- a/tootoo-templates/hamburger-markdown-html-swipe.html
+++ b/tootoo-templates/hamburger-markdown-html-swipe.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="basic html template with sliding menu, markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2017-12-18" >
+<meta name = "date" content = "2018-06-23" >
 <title>basic-hamburger-markdown-html</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
@@ -14,7 +14,7 @@
 
 	html { --mnu-color: crimson; --mnu-back-color: Linen; --mnu-width:250px; height: 100%; }
 
-	body, html { font: 12pt monospace; height: 100%; margin: 0; }
+	body, html { font: 12pt "Trebuchet MS", helvetica, sans-serif; height: 100%; margin: 0; }
 
 	a { color: var( --mnu-color ); text-decoration: none; }
 	a:hover, a:focus, #hamburger:hover { background-color: yellow; color: #888; }
@@ -35,7 +35,7 @@
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
 
 
-	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; margin: 0;
+	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; height: 100%; margin: 0;
 		overflow-x: hidden; padding: 30px 10px 30px 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
 
 	#hamburger { background-color: pink; box-sizing: border-box; cursor: pointer; font-size: 30px; left: calc( var( --mnu-width ) - 100px );
@@ -44,11 +44,12 @@
 </style>
 </head>
 <body>
-<script src=https://cdn.rawgit.com/showdownjs/showdown/1.8.5/dist/showdown.min.js ></script>
+<script src=https://cdn.rawgit.com/showdownjs/showdown/1.8.6/dist/showdown.min.js ></script>
+
 
 	<div id = "divMenu" >
 
-<!--	<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a> -->
+		<!--	<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a> -->
 		<div id = "divTitle" ></div>
 
 		<div id = "divMenuItems" >
@@ -88,16 +89,18 @@
 	<div id = "hamburger" onclick=toggleNav(); > slide &#9776;  </div>
 
 <script>
-// https://github.com/showdownjs/showdown
+	// https://github.com/showdownjs/showdown << check for latest rev from time to time
+	// jshint esversion: 6
 
 
-	var xDown = null;
-	var yDown = null;
+	let xDown = null;
+	let yDown = null;
 
-
-//	let defaultFile = 'index.html';
-//	location.hash = '../README.md';
+	//	let defaultFile = 'index.html';
+	//	location.hash = '../README.md';
 	let uriDefaultFile = 'README.md';
+	const txt = 'lorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?';
+
 
 
 	init();
@@ -109,6 +112,8 @@
 			'<h2><a href = "" >' + document.title + '</a></h2>' +
 			'<p>' + document.head.querySelector( '[name=description]' ).content + '</p>' +
 		'';
+
+		divMenuItems.innerHTML += txt + txt;
 
 		document.addEventListener( 'touchstart', onTouchStart, false );
 		document.addEventListener( 'touchmove', onTouchMove, false );
@@ -151,13 +156,12 @@
 
 
 
-
 	function callbackMarkdown( xhr ){
 
 		showdown.setFlavor('github');
 		const converter = new showdown.Converter();
 		const response = xhr.target.response;
-		const html = converter.makeHtml( xhr.target.responseText );
+		const html = converter.makeHtml( response );
 
 		divContents.style.maxWidth = '800px';
 		document.body.overflow = '';
@@ -184,7 +188,7 @@
 		xhr.crossOrigin = 'anonymous';
 		xhr.open( 'GET', url, true );
 		xhr.onerror = function( xhr ) { console.log( 'error:', xhr  ); };
-//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
+		//		xhr.onprogress = function( xhr ) { console.log(  'bytes loaded: ' + xhr.loaded.toLocaleString() ) }; /// or something
 		xhr.onload = callback;
 		xhr.send( null );
 
@@ -198,7 +202,7 @@
 		xDown = event.touches[ 0 ].clientX;
 		yDown = event.touches[ 0 ].clientY;
 
-	};
+	}
 
 
 	function onTouchMove(event) {
@@ -209,25 +213,25 @@
 
 		}
 
-		var xUp = event.touches[ 0 ].clientX;
-		var yUp = event.touches[ 0 ].clientY;
+		const xUp = event.touches[ 0 ].clientX;
+		const yUp = event.touches[ 0 ].clientY;
 
-		var xDiff = xDown - xUp;
-		var yDiff = yDown - yUp;
+		const xDiff = xDown - xUp;
+		const yDiff = yDown - yUp;
 
 		if ( Math.abs( xDiff ) > Math.abs( yDiff ) ) {// most significant
 
 			if ( xDiff > 0 ) {
 
-				toggleNav()
-// left swipe
-console.log( 'left swipe' );
+				toggleNav();
+				// left swipe
+				console.log( 'left swipe' );
 
 			} else {
 
 				toggleNav();
-// right swipe
-console.log( 'right swipe' );
+				// right swipe
+				console.log( 'right swipe' );
 
 			}
 
@@ -235,13 +239,13 @@ console.log( 'right swipe' );
 
 			if ( yDiff > 0 ) {
 
-//up swipe
-console.log( 'up swipe' );
+				//up swipe
+				console.log( 'up swipe' );
 
 			} else {
 
-// down swipe
-console.log( 'down swipe' );
+				// down swipe
+				console.log( 'down swipe' );
 
 			}
 
@@ -250,7 +254,7 @@ console.log( 'down swipe' );
 		xDown = null;
 		yDown = null;
 
-	};
+	}
 
 
 
@@ -262,7 +266,7 @@ console.log( 'down swipe' );
 
 			divMenu.style.width = '0';
 			divMenu.style.padding = '0';
-			hamburger.style.left = '-100px';
+			hamburger.style.left = '-75px';
 			divContainer.style.marginLeft = '0';
 
 		} else {
