--- a/tootoo-templates/threejs-shade.html
+++ b/tootoo-templates/threejs-shade.html
@@ -51,7 +51,7 @@
 			'<h3><a  href = "" >' + document.title + '</a> &nbsp; ' +
 			'<a href=' + infoURI + ' target="top" >&#x24D8</a></h3>';
 
-		const size = 100
+		const size = 100;
 
 		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true }  );
 		renderer.setSize( window.innerWidth, window.innerHeight );
