--- a/tootoo-templates/threejs-basic.html
+++ b/tootoo-templates/threejs-basic.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content = "width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0" >
 <meta name=description content="Real-time 3D in your browser using the Three.js JavaScript library" >
 <meta name=keywords content="Three.js,WebGL,JavaScript,GitHub,FOSS,3D,STEM" >
-<meta name = "date" content = "2018-05-06" >
+<meta name = "date" content = "2018-06-24" >
 <title></title>
 <style>
 
@@ -22,14 +22,14 @@
 </head>
 <body>
 <script src = "https://cdn.rawgit.com/mrdoob/three.js/r93/build/three.min.js" ></script>
-<script src = "https://cdn.rawgit.com/mrdoob/three.js/r93/examples/js/controls/OrbitControls.js" ></script>
+<script src = "https://cdn.rawgit.com/mrdoob/three.js/r93/examples/js/controls/TrackballControls.js" ></script>
 
 	<div id = "divMenu" >
 
 		<div id = "divTitle" ></div>
 
 		<p>
-			<button onclick=controls.autoRotate=!controls.autoRotate; >rotation</button>
+			<button onclick="sceneRotation = sceneRotation === 1 ? 0 : 1;" >rotation</button>
 		</p>
 
 		<div id = "divLog" ></div>
@@ -38,71 +38,77 @@
 
 <script>
 
-	var renderer, camera, controls, scene, axesHelper;
-	var geometry, material, mesh;
-
-	init();
-	animate();
-
-	function init() {
-
-		const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
-		//const title = document.title;
-
-		divTitle.innerHTML =
-		`<h1>
-			<a href="" >${title}</a>
-		</h1>`;
-
-		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
-		renderer.setPixelRatio( window.devicePixelRatio );
-		renderer.setSize( window.innerWidth, window.innerHeight );
-		document.body.appendChild( renderer.domElement );
-
-		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
-		camera.position.set( -100, -100, 100 );
-		camera.up.set( 0, 0, 1 );
-
-		controls = new THREE.OrbitControls( camera, renderer.domElement );
-
-		scene = new THREE.Scene();
-
-		window.addEventListener( 'resize', onWindowResize, false );
-
-		window.addEventListener( 'orientationchange', onWindowResize, false );
-
-		axesHelper = new THREE.AxesHelper( 100 );
-		scene.add( axesHelper );
-
-		geometry = new THREE.BoxGeometry( 50, 50, 50 );
-		material = new THREE.MeshNormalMaterial();
-		mesh = new THREE.Mesh( geometry, material );
-		scene.add( mesh );
-
-	}
+/* globals THREE, divTitle, divMenu, hamburger  */
+// jshint esversion: 6
 
 
+let sceneRotation = 1;
+let renderer, camera, controls, scene;
 
-	function onWindowResize() {
+init();
+animate();
 
-		camera.aspect = window.innerWidth / window.innerHeight;
-		camera.updateProjectionMatrix();
+function init() {
 
-		renderer.setSize( window.innerWidth, window.innerHeight );
+	const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
+	//const title = document.title;
 
-		//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
+	divTitle.innerHTML =
+	`<h1>
+		<a href="" >${title}</a>
+	</h1>`;
 
-	}
+	renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true } );
+	renderer.setPixelRatio( window.devicePixelRatio );
+	renderer.setSize( window.innerWidth, window.innerHeight );
+	document.body.appendChild( renderer.domElement );
+
+	camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
+	camera.position.set( -100, -100, 100 );
+	camera.up.set( 0, 0, 1 );
+
+	controls = new THREE.TrackballControls( camera, renderer.domElement );
+
+	scene = new THREE.Scene();
+
+	window.addEventListener( 'resize', onWindowResize, false );
+	window.addEventListener( 'orientationchange', onWindowResize, false );
+	window.addEventListener( 'keyup', () => sceneRotation = 0, false );
+	renderer.domElement.addEventListener( 'click', () => sceneRotation = 0, false );
+
+	const axesHelper = new THREE.AxesHelper( 100 );
+	scene.add( axesHelper );
+
+	const geometry = new THREE.BoxGeometry( 50, 50, 50 );
+	const material = new THREE.MeshNormalMaterial();
+	const mesh = new THREE.Mesh( geometry, material );
+	scene.add( mesh );
+
+}
 
 
 
-	function animate() {
+function onWindowResize() {
 
-		requestAnimationFrame( animate );
-		renderer.render( scene, camera );
-		controls.update();
+	camera.aspect = window.innerWidth / window.innerHeight;
+	camera.updateProjectionMatrix();
 
-	}
+	renderer.setSize( window.innerWidth, window.innerHeight );
+
+	//console.log( 'onWindowResize  window.innerWidth', window.innerWidth );
+
+}
+
+
+
+function animate() {
+
+	requestAnimationFrame( animate );
+	renderer.render( scene, camera );
+	controls.update();
+	scene.rotation.z += sceneRotation / 1000;
+
+}
 
 </script>
 </body>
