--- a/tootoo-templates/threejs-basic-hamburger.html
+++ b/tootoo-templates/threejs-basic-hamburger.html
@@ -76,6 +76,8 @@
 			<button title = "Toggle the scene spinning" onclick="controls.autoRotate=!controls.autoRotate;" style=width:100%; >rotation</button>
 		</div>
 
+		<div id = "divLog" ></div>
+
 		<hr>
 
 		<center title="Hello, world!" onclick="divMenu.scrollTop=0;" style="color:#aaa;cursor:pointer;font-size:1.5rem;" > ❦ </center>
