--- a/tootoo-templates/threejs-basic.html
+++ b/tootoo-templates/threejs-basic.html
@@ -50,7 +50,7 @@ animate();
 
 function init() {
 
-	const title = location.href.split( '/' ).pop().slice( 0, -5 ).replace( /-/g, ' ' );
+	const title = location.href.split( '/' ).pop().slice( 0, - 5 ).replace( /-/g, ' ' );
 	//const title = document.title;
 
 	divTitle.innerHTML =
@@ -64,7 +64,7 @@ function init() {
 	document.body.appendChild( renderer.domElement );
 
 	camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
-	camera.position.set( -100, -100, 100 );
+	camera.position.set( - 100, - 100, 100 );
 	camera.up.set( 0, 0, 1 );
 
 	controls = new THREE.TrackballControls( camera, renderer.domElement );
