--- a/tootoo-templates/hamburger-bootswatch/hamburger-bootswatch.html
+++ b/tootoo-templates/hamburger-bootswatch/hamburger-bootswatch.html
@@ -16,7 +16,11 @@
 
 	html { height: 100%; margin: 0; }
 
-	body {  height: 100%; margin: 0; }
+	body { height: 100%; margin: 0; }
+
+	a:hover, a:focus, #hamburger:hover { background-color: yellow; color: #888; }
+
+	button:hover, input[ type=button ]:hover { background-color: #ccc; color: white }
 
 	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
 	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
@@ -62,7 +66,7 @@
 
 	blockquote, pre { background-color: #eee; padding: 10px; }
 	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
-	button:hover { background-color: #ccc; color: white }
+	button:hover, input:hover { background-color: #ccc; color: white }
 
 	iframe { /*border: none; * width: 100%; }
 
@@ -71,16 +75,6 @@
 	input[ type = range ]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 20px; width: 10px; }
 
 	td { vertical-align: top; }
-
-	#divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
-	#divContents { height: 100%; left: 0; margin: 0 auto; max-width: 800px; right: 0;}
-
-
-	#divMenu { background-color: var( --mnu-back-color ); box-sizing: border-box; height: 100%; margin: 0;
-		overflow-x: hidden; padding: 30px 10px 30px 10px; position: fixed; top: 0; width: var( --mnu-width ); z-index: 1; transition: 0.5s; }
-
-	#hamburger { background-color: pink; box-sizing: border-box; cursor: pointer; font-size: 30px; left: calc( var( --mnu-width ) - 100px );
-		line-height: 30px; margin: 0; padding: 5px 15px 8px 10px; position: fixed; top: 0; transition: left .5s; z-index: 10; }
 
 */
 
@@ -193,7 +187,7 @@ function init() {
 		</div>
 
 		<h2>
-			<a href="" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+			<a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-bootswatch" target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
 			<a href = "" >${ document.title }</a>
 		</h2>
 
@@ -347,7 +341,7 @@ function onTouchMove(event) {
 
 function toggleNav() {
 
-	width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' ).trim();
+	const width = getComputedStyle(document.documentElement).getPropertyValue( '--mnu-width' ).trim();
 
 	if ( !divMenu.style.width || divMenu.style.width === width ) {
 
