--- a/tootoo-templates/hamburger-bootswatch-cms/hamburger-bootswatch-cms.html
+++ b/tootoo-templates/hamburger-bootswatch-cms/hamburger-bootswatch-cms.html
@@ -81,7 +81,9 @@
 
 		<div id = "divBreadcrumbs" ></div>
 
-		<div id = "divMenuItems" >
+		<div id = "divMenuItems" ></div>
+
+		<div id = "divExtras" >
 
 			<p><a href="#../../pages/markdown-help.md" >markdown-help.md</a></p>
 
@@ -93,10 +95,9 @@
 
 			<p><a href="#../../utilities/invertocat.png" >invertocat.png</a></p>
 
-			<p><a href="https://bootswatch.com" target=_blank >bootswatch.com 🗗</a></p>
+			<p><a href="https://bootswatch.com" target=_blank >🗗 bootswatch.com</a></p>
 
 		</div>
-
 
 		<div id= "divFooter" >
 
@@ -131,13 +132,16 @@
 				</p>
 			</div>
 
+			<div title='Me want too!' ><a href=#../../pages/about-this-cms.md >About this CMS</a></div>
+			<div title='What is this stuff?' ><a href=#../../pages/coding-style.md >Coding style</a></div>
 			<div title='many thanks!' ><a href=#../../pages/credits.md >Credits</a></div>
-			<div><a href=#../../pages/code-of-conduct.md >Code of Conduct</a></div>
+			<div><a href=#../../pages/code-of-conduct.md >Code of conduct</a></div>
 			<div><a href=#../../pages/contributing.md >Contributing</a></div>
 			<div><a href=#../../pages/license.md >License</a></div>
-			<div><a href=#../../pages/markdown-help.md >Markdown Help</a></div>
+			<div><a href=#../../pages/markdown-help.md >Markdown help</a></div>
+			<div><a title='Need help' href=https://github.com/pushme-pullyou/pushme-pullyou.github.io/issues target=_blank >🗗 GitHub Issues</a></div>
 			<div><a href="javascript:( function(){ var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='https://rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()" title="Mr.doob's Stats.js appear in top left corner" >Show frames/second statistics</a></div>
-			<div><a href="https://api.github.com/rate_limit" target=_blank title='If menu stops appearing, it is likely due to too many API calls' >View GitHub API Rate Limits</a></div>
+			<div><a href="https://api.github.com/rate_limit" title='If menu stops appearing, it is likely due to too many API calls' target=_blank >View GitHub API rate limits</a></div>
 
 			<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of page' > &#x2766; </h1>
 
